# -*- eval: (cargo-minor-mode 1) -*-

[workspace]
members = [".", "./benchmarks"]

[package]
name = "aatree"
version = "0.1.0"
authors = ["Dominic Meiser <git@msrd0.de>"]
license = "Apache-2.0"

edition = "2018"
rust-version = "1.50"

[features]
default = ["log"]

[dependencies]
log = { version = "0.4.8", optional = true }
