# -*- eval: (cargo-minor-mode 1) -*-

[workspace]
members = [".", "./benchmarks"]

[package]
name = "aatree"
version = "0.2.2"
authors = ["Dominic Meiser <git@msrd0.de>"]
license = "Apache-2.0"
include = ["/src/**/*.rs", "/LICENSE", "/README.md"]

description = "AATree implementation in Rust"
repository = "https://github.com/msrd0/aatree"
keywords = ["data-structures", "tree", "collections", "set", "map"]
categories = ["data-structures"]

edition = "2021"
rust-version = "1.76"

[dependencies]
document-features = { version = "0.2", optional = true }
openapi_type = { version = "0.4", optional = true }
serde = { version = "1", default-features = false, optional = true }

[dev-dependencies]
serde_json = "1"

[features]
## Add `OpenapiType` implementations for `AATreeSet` and `AATreeMap`.
openapi = ["dep:openapi_type"]

## Add `(De)Serialize` implementations for `AATreeSet` and `AATreeMap`.
serde = ["dep:serde"]

[package.metadata.docs.rs]
all-features = true
